--- a/Views/Phones/Details.cshtml
+++ b/Views/Phones/Details.cshtml
@@ -28,9 +28,16 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BrandSite)
+        </dt>
+        <dd class="col-sm-10">
+            <a asp-action="BrandSite" asp-route-id="@Model.Id">@Html.DisplayFor(model => model.BrandSite)</a>
+        </dd>
     </dl>
 </div>
 <div>
+    <a asp-action="DownloadFile" asp-route-id="@Model.Id">Download Description File</a>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
