--- a/Views/Phones/Index.cshtml
+++ b/Views/Phones/Index.cshtml
@@ -46,7 +46,9 @@ else
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                        <a asp-route-phoneId="@item.Id" asp-action="Create" asp-controller="Orders">Make order</a> |
+                        <a asp-action="BrandSite" asp-route-id="@item.Id">BrandSite</a>
                     </td>
                 </tr>
             }
