--- a/Views/Brands/Delete.cshtml
+++ b/Views/Brands/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC.Models.Phone
+﻿@model MVC.Models.Brand
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Phone</h4>
+    <h4>Brand</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -16,18 +16,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Company)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Company)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
         </dd>
     </dl>
     
