--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.ContactPhone)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Phone)
+                @Html.DisplayNameFor(model => model.Product)
             </th>
             <th></th>
         </tr>
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.ContactPhone)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Phone.Name)
+                @Html.DisplayFor(modelItem => item.Product.Name)
             </td>
         </tr>
 }
