EveryThingIsFine, just add bookFiles

--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -55,5 +55,6 @@
     </dl>
 </div>
 <div>
+    <a asp-action="DownloadFile" asp-route-id="@Model.Id">Download file</a>
     <a asp-action="Index">Back to List</a>
 </div>
